[package]
edition = "2021"
name = "rt-evm-executor"
version = "0.1.0"

[dependencies]
ruc = { workspace = true }
rlp = { workspace = true }
evm = { workspace = true }

# deps of precompiles
az = { workspace = true }
bn = { workspace = true }
rug = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }

rt-evm-model = { workspace = true }
rt-evm-crypto = { workspace = true }
rt-evm-storage = { workspace = true }
rt-evm-poa = { workspace = true, optional = true }
rt-evm-pos = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["poa"]
benchmark = []

poa = ["rt-evm-poa"]
pos = ["rt-evm-pos"]
